--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -8,5 +8,5 @@ EMAIL_PASS="nmplvamlzvvqrlqb"
 BASE_URL=http://localhost:3000
 
 ADMIN_EMAIL="admin@urbanweave.com"
-ADMIN_PASS="admin123"
-test="test"
+ADMIN_PASSWORD="admin123"
+
