--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -5,7 +5,7 @@ JWT_SECRET="urbanweave"
 EMAIL_USER="kanekikenghoul2020@gmail.com"
 EMAIL_PASS="nmplvamlzvvqrlqb"
 
-BASE_URL=http://localhost:3000
+BASE_URL=https://urban-weave-backend.vercel.app
 
 ADMIN_EMAIL="admin@urbanweave.com"
 ADMIN_PASSWORD="admin123"
