--- a/BackEnd/.env
+++ b/BackEnd/.env
@@ -4,8 +4,9 @@ CLOUDINARY_NAME="dnjhllcag"
 JWT_SECRET="urbanweave"
 EMAIL_USER="kanekikenghoul2020@gmail.com"
 EMAIL_PASS="nmplvamlzvvqrlqb"
+MONGO_URL="mongodb+srv://athul23ubc131:user@cluster0.wopby4z.mongodb.net/UrbanWeave"
 
-BASE_URL=https://urban-weave-backend.vercel.app
+BASE_URL= http://localhost:3000
 
 ADMIN_EMAIL="admin@urbanweave.com"
 ADMIN_PASSWORD="admin123"
